Todo items responsive

--- a/HomeManager/View/ToDo/ucTodo.xaml
+++ b/HomeManager/View/ToDo/ucTodo.xaml
@@ -75,6 +75,7 @@
                 ToolTip="Vernieuw de gegevens" />
         </StackPanel>
         <ListBox
+            BorderBrush="Transparent"
             Name="ToDoCollectiesOpvullingListView"
             Grid.Row="1"
             Grid.Column="0"
@@ -87,7 +88,8 @@
             Grid.Column="1"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
-            BorderBrush="Gray"
+            HorizontalContentAlignment="Stretch"
+            BorderBrush="Transparent"
             BorderThickness="1"
             ItemsSource="{Binding OnAfgehandeldeTodoItems, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
             SelectedItem="{Binding MijnSelectedItemTodoPopup, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -95,15 +97,15 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Border
-                        Width="300"
                         Padding="5"
-                        HorizontalAlignment="Stretch"
+                        Height="55"
+                        HorizontalAlignment="Stretch" 
                         VerticalAlignment="Stretch"
                         Background="{Binding IsKlaar, Converter={StaticResource BoolToColorBrushConverter}, ConverterParameter=Background}"
                         BorderBrush="{Binding IsKlaar, Converter={StaticResource BoolToColorBrushConverter}, ConverterParameter=Border}"
                         BorderThickness="2"
                         CornerRadius="5">
-                        <Grid>
+                        <Grid HorizontalAlignment="Stretch">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="Auto" />
@@ -126,7 +128,7 @@
                                     <TextBlock
                                         FontSize="12"
                                         Foreground="Gray"
-                                        Text="{Binding Detail}" />
+                                        Text="{Binding Detail}" />  
                                 </StackPanel>
                             </StackPanel>
                             <CheckBox
@@ -149,8 +151,7 @@
                                 CommandParameter="{Binding}"
                                 Background="{Binding Belangrijk, Converter={StaticResource BoolToColorBrushConverter}, ConverterParameter=Belangrijk}"
                                 Style="{StaticResource BelangrijkButton}"
-                                ToolTip="Door dit aan te kliken wordt de todo item bovenaan in de lijst gezet"/>
-
+                                ToolTip="Door dit aan te kliken wordt de todo item bovenaan in de lijst gezet"/>    
                             <Button
                                 x:Name="EditBtn"
                                 Grid.Column="3"
@@ -172,7 +173,7 @@
                                 Command="{Binding DataContext.DeleteTodoCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
                                 CommandParameter="{Binding}"
                                 Style="{StaticResource DeleteTodoImage}"
-                                ToolTip="Todo verwijderen" />
+                                ToolTip="Todo verwijderen" />   
                             <Button
                                 x:Name="PaperclipBtn"
                                 Grid.Column="5"
@@ -185,7 +186,6 @@
                                 CommandParameter="{Binding}"
                                 Style="{StaticResource PaperclipTodoImage}"
                                 ToolTip="Bijlage toevoegen" />
-                            
                         </Grid>
                     </Border>
                 </DataTemplate>
@@ -231,76 +231,76 @@
                                     </Grid.ColumnDefinitions>
                                     <StackPanel Grid.Column="0" Orientation="Horizontal">
                                         <Rectangle
-                                    Width="5"
-                                    Margin="5"
-                                    Fill="{Binding TodoColorID, Converter={StaticResource IntToBrushConverter}}" />
+                                            Width="5"
+                                            Margin="5"
+                                            Fill="{Binding TodoColorID, Converter={StaticResource IntToBrushConverter}}" />
                                         <StackPanel>
                                             <TextBlock
-                                        FontSize="14"
-                                        FontWeight="Bold"
-                                        Foreground="Black"
-                                        Text="{Binding Onderwerp}" />
+                                                FontSize="14"
+                                                FontWeight="Bold"
+                                                Foreground="Black"
+                                                Text="{Binding Onderwerp}" />
                                             <TextBlock
-                                        FontSize="12"
-                                        Foreground="Gray"
-                                        Text="{Binding Detail}" />
+                                                FontSize="12"
+                                                Foreground="Gray"
+                                                Text="{Binding Detail}" />
                                         </StackPanel>
                                     </StackPanel>
                                     <CheckBox
-                                x:Name="IsKlaarCbx"
-                                Grid.Column="1"
-                                Margin="5,0"
-                                VerticalAlignment="Center"
-                                IsChecked="{Binding IsKlaar, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                Command="{Binding Source={StaticResource VML}, Path=ToDoViewModel.IsKlaarCommand, UpdateSourceTrigger=PropertyChanged}"
-                                CommandParameter="{Binding}"
-                                ToolTip="Door dit aan te vinken is de Todo klaar" />
+                                        x:Name="IsKlaarCbx"
+                                        Grid.Column="1"
+                                        Margin="5,0"
+                                        VerticalAlignment="Center"
+                                        IsChecked="{Binding IsKlaar, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                        Command="{Binding Source={StaticResource VML}, Path=ToDoViewModel.IsKlaarCommand, UpdateSourceTrigger=PropertyChanged}"
+                                        CommandParameter="{Binding}"
+                                        ToolTip="Door dit aan te vinken is de Todo klaar" />
                                     <Button
-                                x:Name="BelangrijkBtn"
-                                Grid.Column="2"
-                                Width="17"
-                                Height="17"
-                                Margin="5,0"
-                                HorizontalAlignment="Center"
-                                Command="{Binding Source={StaticResource VML}, Path=ToDoViewModel.BelangrijkCommand, UpdateSourceTrigger=PropertyChanged}"
-                                CommandParameter="{Binding}"
-                                Background="{Binding Belangrijk, Converter={StaticResource BoolToColorBrushConverter}, ConverterParameter=Belangrijk}"
-                                Style="{StaticResource BelangrijkButton}"
-                                ToolTip="Door dit aan te kliken wordt de todo item bovenaan in de lijst gezet" />
+                                        x:Name="BelangrijkBtn"
+                                        Grid.Column="2"
+                                        Width="17"
+                                        Height="17"
+                                        Margin="5,0"
+                                        HorizontalAlignment="Center"
+                                        Command="{Binding Source={StaticResource VML}, Path=ToDoViewModel.BelangrijkCommand, UpdateSourceTrigger=PropertyChanged}"
+                                        CommandParameter="{Binding}"
+                                        Background="{Binding Belangrijk, Converter={StaticResource BoolToColorBrushConverter}, ConverterParameter=Belangrijk}"
+                                        Style="{StaticResource BelangrijkButton}"
+                                        ToolTip="Door dit aan te kliken wordt de todo item bovenaan in de lijst gezet" />
                                     <Button
-                                x:Name="EditBtn"
-                                Grid.Column="3"
-                                Width="10"
-                                Height="10"
-                                Margin="5,0"
-                                VerticalAlignment="Center"
-                                Command="{Binding DataContext.EditTodoCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                                CommandParameter="{Binding}"
-                                Style="{StaticResource EditTodoImage}"
-                                ToolTip="Todo aanpassen" />
+                                        x:Name="EditBtn"
+                                        Grid.Column="3"
+                                        Width="10"
+                                        Height="10"
+                                        Margin="5,0"
+                                        VerticalAlignment="Center"
+                                        Command="{Binding DataContext.EditTodoCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                        CommandParameter="{Binding}"
+                                        Style="{StaticResource EditTodoImage}"
+                                        ToolTip="Todo aanpassen" />
                                     <Button
-                                x:Name="DeleteBtn"
-                                Grid.Column="4"
-                                Width="10"
-                                Height="10"
-                                Margin="5,0"
-                                VerticalAlignment="Center"
-                                Command="{Binding DataContext.DeleteTodoCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                                CommandParameter="{Binding}"
-                                Style="{StaticResource DeleteTodoImage}"
-                                ToolTip="Todo verwijderen" />
+                                        x:Name="DeleteBtn"
+                                        Grid.Column="4"
+                                        Width="10"
+                                        Height="10"
+                                        Margin="5,0"
+                                        VerticalAlignment="Center"
+                                        Command="{Binding DataContext.DeleteTodoCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                        CommandParameter="{Binding}"
+                                        Style="{StaticResource DeleteTodoImage}"
+                                        ToolTip="Todo verwijderen" />
                                     <Button
-                                x:Name="PaperclipBtn"
-                                Grid.Column="5"
-                                Width="8"
-                                Height="15"
-                                Margin="5,0"
-                                HorizontalAlignment="Right"
-                                VerticalAlignment="Center"
-                                Command="{Binding DataContext.OpenTodoBijlageCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                                CommandParameter="{Binding}"
-                                Style="{StaticResource PaperclipTodoImage}"
-                                ToolTip="Bijlage toevoegen" />
+                                        x:Name="PaperclipBtn"
+                                        Grid.Column="5"
+                                        Width="8"
+                                        Height="15"
+                                        Margin="5,0"
+                                        HorizontalAlignment="Right"
+                                        VerticalAlignment="Center"
+                                        Command="{Binding DataContext.OpenTodoBijlageCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                        CommandParameter="{Binding}"
+                                        Style="{StaticResource PaperclipTodoImage}"
+                                        ToolTip="Bijlage toevoegen" />
                                 </Grid>
                             </Border>
                         </DataTemplate>
@@ -313,7 +313,10 @@
             Name="ToDoDetailsOpvulling"
             Grid.Row="1"
             Grid.Column="2"
-            BorderBrush="Gray"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            HorizontalContentAlignment="Stretch"
+            BorderBrush="Transparent"
             BorderThickness="1"
             ItemsSource="{Binding FilteredTodoDetails, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
             SelectedItem="{Binding MijnSelectedTodoDetail, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -321,7 +324,7 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Border
-                        Width="300"
+                        Height="55"
                         Padding="5"
                         HorizontalAlignment="Stretch"
                         VerticalAlignment="Stretch"
@@ -382,6 +385,5 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-
     </Grid>
 </UserControl>
