--- a/HomeManager/View/Dagboek/ucDagboek.xaml
+++ b/HomeManager/View/Dagboek/ucDagboek.xaml
@@ -267,30 +267,35 @@
                                         <ComboBox.ItemTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBlock VerticalAlignment="Center" Text="{Binding ColorName}" Foreground="{Binding MyBrush}" />
+                                                    <TextBlock
+                                                        VerticalAlignment="Center"
+                                                        Foreground="{Binding MyBrush}"
+                                                        Text="{Binding ColorName}" />
                                                 </StackPanel>
                                             </DataTemplate>
                                         </ComboBox.ItemTemplate>
                                     </ComboBox>
-                                    
+
                                 </StackPanel>
                                 <StackPanel Grid.Row="1" Orientation="Horizontal">
                                     <RibbonButton
                                         Command="{Binding cmdSetBackgroundToText}"
                                         CommandParameter="{Binding ElementName=MyRTB}"
                                         Content="{StaticResource PaintBucked}"
-                                        Style="{StaticResource myRibbonButton}"
-                                        />
-                                    <ComboBox 
+                                        Style="{StaticResource myRibbonButton}" />
+                                    <ComboBox
                                         Width="150"
                                         Margin="2"
-                                        ItemsSource="{Binding MyRTBLayout.ColorsCollection}" 
+                                        ItemsSource="{Binding MyRTBLayout.ColorsCollection}"
                                         SelectedItem="{Binding MyRTBLayout.SelectedTextBackgroundColor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
 
                                         <ComboBox.ItemTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
-                                                    <TextBlock VerticalAlignment="Center" Text="{Binding ColorName}" Foreground="{Binding MyBrush}" />
+                                                    <TextBlock
+                                                        VerticalAlignment="Center"
+                                                        Foreground="{Binding MyBrush}"
+                                                        Text="{Binding ColorName}" />
                                                 </StackPanel>
                                             </DataTemplate>
                                         </ComboBox.ItemTemplate>
@@ -328,7 +333,7 @@
                                     SelectedItem="{Binding MyRTBLayout.SelectedFond, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
 
                                     <ComboBox.ItemContainerStyle>
-                                        
+
                                         <Style TargetType="ComboBoxItem">
                                             <Setter Property="FontFamily" Value="{Binding}" />
                                         </Style>
@@ -341,7 +346,12 @@
                                     </i:Interaction.Triggers>
                                 </ComboBox>
 
-                                <Label FontSize="8" VerticalAlignment="Center" Grid.Row="1">Letter Grootte</Label>
+                                <Label
+                                    Grid.Row="1"
+                                    VerticalAlignment="Center"
+                                    FontSize="8">
+                                    Letter Grootte
+                                </Label>
 
                                 <ComboBox
                                     x:Name="cboMyFondSizes"
@@ -443,17 +453,17 @@
                                 <RibbonButton
                                     Grid.Row="1"
                                     Grid.Column="0"
-                                    Content="{StaticResource InspringenIncrease}"
-                                    Style="{StaticResource myRibbonButton}"
                                     Command="{Binding cmdIncreaseTextIndent}"
-                                    CommandParameter="{Binding ElementName=MyRTB}"/>
+                                    CommandParameter="{Binding ElementName=MyRTB}"
+                                    Content="{StaticResource InspringenIncrease}"
+                                    Style="{StaticResource myRibbonButton}" />
                                 <RibbonButton
                                     Grid.Row="1"
                                     Grid.Column="1"
-                                    Content="{StaticResource InspringenDecrease}"
-                                    Style="{StaticResource myRibbonButton}" 
                                     Command="{Binding cmdDecreaseTextIndent}"
-                                    CommandParameter="{Binding ElementName=MyRTB}"/>
+                                    CommandParameter="{Binding ElementName=MyRTB}"
+                                    Content="{StaticResource InspringenDecrease}"
+                                    Style="{StaticResource myRibbonButton}" />
                                 <RibbonToggleButton
                                     Grid.Row="1"
                                     Grid.Column="2"
@@ -507,8 +517,8 @@
                         x:Name="MyRTB"
                         Grid.Column="1"
                         Margin="2"
-                        AcceptsTab="True"
-                        AcceptsReturn="True">
+                        AcceptsReturn="True"
+                        AcceptsTab="True">
 
                         <i:Interaction.Behaviors>
                             <behaviors:clsRichTextBoxSelectionBehavior Layout="{Binding MyRTBLayout}" />
