--- a/HomeManager/Resources/StyleHamburgerMenu.xaml
+++ b/HomeManager/Resources/StyleHamburgerMenu.xaml
@@ -801,7 +801,7 @@
                                 <Button
                                     Margin="10,0,0,0"
                                     Command="{Binding NavCommand}"
-                                    CommandParameter="clsCategorieViewModel"
+                                    CommandParameter="clsCategorieënVM"
                                     Style="{StaticResource myExpanderTodo}">
                                     <Button.Content>
                                         <TextBlock Foreground="{StaticResource MenuColorText}" Text="ToDo" />
