--- a/HomeManager/View/Budget/ucDomiciliering.xaml
+++ b/HomeManager/View/Budget/ucDomiciliering.xaml
@@ -119,11 +119,10 @@
                 <ListBox
                     Name="Domiciliering"
                     Grid.Row="2"
-                    Grid.RowSpan="11"
+                    Grid.RowSpan="9"
                     Grid.Column="1"
-                    Width="230"
+                    Width="225"
                     Margin="5"
-                   
                     ItemsSource="{Binding GefilterdeCollectie}"
                     SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
 
@@ -141,10 +140,10 @@
                                         <Setter Property="BorderBrush" Value="Gray" />
                                         <Style.Triggers>
                                             <DataTrigger Binding="{Binding IsUitgaven}" Value="true">
-                                                <Setter Property="BorderBrush" Value="Red" />
+                                                <Setter Property="BorderBrush" Value="IndianRed" />
                                             </DataTrigger>
                                             <DataTrigger Binding="{Binding IsUitgaven}" Value="false">
-                                                <Setter Property="BorderBrush" Value="LightGreen" />
+                                                <Setter Property="BorderBrush" Value="Green" />
                                             </DataTrigger>
                                         </Style.Triggers>
                                     </Style>
@@ -167,7 +166,7 @@
                             </Border>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
-               </ListBox>
+                </ListBox>
 
 
 
@@ -175,8 +174,7 @@
                     Grid.Row="1"
                     Grid.Column="3"
                     HorizontalContentAlignment="Right"
-                    Content="Uitgave"
-                     />
+                    Content="Uitgave" />
                 <CheckBox
                     x:Name="IsUitgave"
                     Grid.Row="1"
@@ -187,8 +185,7 @@
                     Grid.Row="2"
                     Grid.Column="3"
                     HorizontalContentAlignment="Right"
-                    Content="Bedrag"
-                     />
+                    Content="Bedrag" />
                 <TextBox
                     Grid.Row="2"
                     Grid.Column="4"
@@ -196,14 +193,12 @@
                     Margin="5"
                     Helpers:clsFocusExtension.IsFocused="{Binding IsFocusedAfterNew, Mode=TwoWay}"
                     Background="White"
-                    
                     Text="{Binding MijnSelectedItem.Bedrag, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, TargetNullValue=' '}" />
                 <Label
                     Grid.Row="3"
                     Grid.Column="3"
                     HorizontalContentAlignment="Right"
-                    Content="Van Datum"
-                     />
+                    Content="Van Datum" />
 
                 <DatePicker
                     x:Name="dpVanDatum"
@@ -211,15 +206,13 @@
                     Grid.Column="4"
                     Width="200"
                     Margin="5"
-                    
                     SelectedDate="{Binding MijnSelectedItem.VanDatum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, ValidatesOnExceptions=True, Converter={StaticResource DateOnlyToDateTimeConverter}}"
                     SelectedDateFormat="Short" />
                 <Label
                     Grid.Row="4"
                     Grid.Column="3"
                     HorizontalContentAlignment="Right"
-                    Content="Tot Datum"
-                     />
+                    Content="Tot Datum" />
 
                 <DatePicker
                     x:Name="dpTotDatum"
@@ -227,7 +220,6 @@
                     Grid.Column="4"
                     Width="200"
                     Margin="5"
-                    
                     SelectedDate="{Binding MijnSelectedItem.TotDatum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, ValidatesOnExceptions=True, Converter={StaticResource DateOnlyToDateTimeConverter}}"
                     SelectedDateFormat="Short" />
 
@@ -245,9 +237,8 @@
                     Margin="5"
                     VerticalAlignment="Center"
                     Background="White"
-                    
                     Text="{Binding MijnSelectedItem.Onderwerp, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                    TextWrapping="Wrap"/>
+                    TextWrapping="Wrap" />
 
 
                 <Label
@@ -255,8 +246,7 @@
                     Grid.Column="3"
                     Margin="5"
                     HorizontalContentAlignment="Right"
-                    Content="Frequentie"
-                     />
+                    Content="Frequentie" />
                 <StackPanel
                     Grid.Row="6"
                     Grid.Column="4"
@@ -268,7 +258,6 @@
                         Width="170"
                         Margin="5"
                         DataContext="{Binding Source={StaticResource VML}, Path=FrequentieViewModel}"
-                       
                         ItemsSource="{Binding MijnCollectie}"
                         SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.FrequentieID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                         SelectedValuePath="FrequentieID" />
@@ -282,8 +271,7 @@
                     Grid.Row="7"
                     Grid.Column="3"
                     HorizontalContentAlignment="Right"
-                    Content="Begunstigde"
-                     />
+                    Content="Begunstigde" />
                 <StackPanel
                     Grid.Row="7"
                     Grid.Column="4"
@@ -295,7 +283,6 @@
                         Width="170"
                         Margin="5"
                         DataContext="{Binding Source={StaticResource VML}, Path=BegunstigdenViewModel}"
-                       
                         ItemsSource="{Binding MijnCollectie}"
                         SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.BegunstigdeID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                         SelectedValuePath="BegunstigdeID" />
@@ -311,8 +298,7 @@
                     Grid.Row="8"
                     Grid.Column="3"
                     HorizontalContentAlignment="Right"
-                    Content="Categorie"
-                     />
+                    Content="Categorie" />
 
                 <StackPanel
                     Grid.Row="8"
@@ -325,7 +311,6 @@
                         Width="170"
                         Margin="5"
                         DataContext="{Binding Source={StaticResource VML}, Path=CategorieViewModel}"
-                        
                         ItemsSource="{Binding MijnCollectie}"
                         SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.BudgetCategorieID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                         SelectedValuePath="BudgetCategorieID" />
