--- a/HomeManager/View/Budget/ucOverzicht.xaml
+++ b/HomeManager/View/Budget/ucOverzicht.xaml
@@ -51,22 +51,9 @@
                         Foreground="White"
                         Text="Budget Overzicht" />
                 </StackPanel>
-                <Button
-                    Margin="5,0,6,10"
-                    HorizontalAlignment="Right"
-                    VerticalAlignment="Center"
-                    Background="#024f87"
-                    BorderBrush="Transparent"
-                    BorderThickness="0"
-                    Command="{Binding cmdClose}"
-                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}">
-                    <Path
-                        Width="20"
-                        Height="20"
-                        Data="{StaticResource myCloseButton}"
-                        Fill="White"
-                        Stretch="Fill" />
-                </Button>
+
+                <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="Top" />
+
             </Grid>
         </Border>
 
@@ -99,19 +86,13 @@
                     Grid.Column="1"
                     HorizontalAlignment="Right"
                     Orientation="Horizontal">
-                    <ToggleButton
-                        x:Name="ToonToekomstigeToggle"
-                        Width="108"
-                        Margin="20"
-                        HorizontalAlignment="Center"
-                        Content="Toggle" />
                     <Button
-                        Width="30"
-                        Height="30"
+                        Width="50"
+                        Height="50"
                         Margin="5"
                         HorizontalAlignment="Right"
-                        CommandParameter="{Binding}"
                         Command="{Binding cmdExportToExcel}"
+                        CommandParameter="{Binding}"
                         Style="{StaticResource Excel}" />
 
                 </StackPanel>
@@ -163,6 +144,7 @@
                     <Button
                         Margin="5"
                         Command="{Binding cmdEmptyInkomstenComboboxen}"
+                        CommandParameter="{Binding}"
                         Style="{StaticResource Deletefile}" />
                 </StackPanel>
 
@@ -196,18 +178,17 @@
                     Grid.Column="2"
                     Height="200"
                     AutoGenerateColumns="False"
-                    BorderBrush="LightGreen"
+                    BorderBrush="Green"
                     BorderThickness="4"
                     ColumnWidth="*"
                     IsReadOnly="True"
                     ItemsSource="{Binding GefilterdeInkomsten}">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding Jaar}" Header="Jaar" />
                         <DataGridTextColumn Binding="{Binding Maand}" Header="Maand" />
                         <DataGridTextColumn Binding="{Binding BudgetCategorie}" Header="Categorie" />
                         <DataGridTextColumn Binding="{Binding Begunstigde}" Header="Begunstigde" />
                         <DataGridTextColumn Binding="{Binding Bedrag, StringFormat=N2}" Header="Bedrag" />
-                        <DataGridTextColumn Binding="{Binding Onderwerp}" Header="Onderwerp" />
+
                     </DataGrid.Columns>
                     <DataGrid.Resources>
                         <Style TargetType="ScrollViewer">
@@ -216,6 +197,8 @@
                         </Style>
                     </DataGrid.Resources>
                 </DataGrid>
+
+
 
                 <!--  Selectie  -->
                 <StackPanel
@@ -262,6 +245,7 @@
                     <Button
                         Margin="5"
                         Command="{Binding cmdEmptyUitgavenComboboxen}"
+                        CommandParameter="{Binding}"
                         Style="{StaticResource Deletefile}" />
                 </StackPanel>
 
@@ -296,7 +280,7 @@
                     Height="200"
                     Margin="5"
                     AutoGenerateColumns="False"
-                    BorderBrush="Red"
+                    BorderBrush="IndianRed"
                     BorderThickness="4"
                     ColumnWidth="*"
                     IsReadOnly="True"
