--- a/HomeManager/View/Security/winNewPassWord.xaml
+++ b/HomeManager/View/Security/winNewPassWord.xaml
@@ -1,12 +1,15 @@
-﻿<Window x:Class="HomeManager.View.winNewPassWord"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HomeManager.View"
-        mc:Ignorable="d"
-        Background="{StaticResource myBackground}"
-        Title="winNewPassWord" Height="250" Width="350">
+﻿<Window
+    x:Class="HomeManager.View.winNewPassWord"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:HomeManager.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="winNewPassWord"
+    Width="350"
+    Height="250"
+    Background="{StaticResource myBackground}"
+    mc:Ignorable="d">
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=NewPassViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
@@ -16,30 +19,30 @@
         <Border Background="{StaticResource myTitleBar}">
 
             <StackPanel
-             Margin="10,0,0,0"
-             HorizontalAlignment="Left"
-             VerticalAlignment="Center"
-             Orientation="Horizontal">
+                Margin="10,0,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                Orientation="Horizontal">
                 <Path
-                 Width="20"
-                 Height="20"
-                 Data="{StaticResource myPathSetting}"
-                 Fill="{StaticResource myWerkBalk}"
-                 Stretch="Fill" />
+                    Width="20"
+                    Height="20"
+                    Data="{StaticResource myPathSetting}"
+                    Fill="{StaticResource myWerkBalk}"
+                    Stretch="Fill" />
                 <Label
-                 Margin="5,0,0,0"
-                 Content="Nieuw Wachtwoord"
-                 Foreground="{StaticResource myWerkBalk}" />
+                    Margin="5,0,0,0"
+                    Content="Nieuw Wachtwoord"
+                    Foreground="{StaticResource myWerkBalk}" />
 
             </StackPanel>
         </Border>
 
-            <Border
-         Grid.Row="1"
-         Margin="5,5,5,5"
-         BorderBrush="{StaticResource myTitleBar}"
-         BorderThickness="1"
-         CornerRadius="5">
+        <Border
+            Grid.Row="1"
+            Margin="5,5,5,5"
+            BorderBrush="{StaticResource myTitleBar}"
+            BorderThickness="1"
+            CornerRadius="5">
 
             <Grid>
                 <Grid.RowDefinitions>
@@ -57,56 +60,56 @@
                 </Grid.ColumnDefinitions>
 
                 <Label
-                 Grid.Row="1"
-                 Grid.Column="1"
-                 HorizontalAlignment="Right"
-                 VerticalAlignment="Center"
-                 Content="Nieuw Wachtwoord" />
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Content="Nieuw Wachtwoord" />
 
                 <TextBox
-                 Grid.Row="1"
-                 Grid.Column="2"
-                 Width="150"
-                 Height="18"
-                 Text="{Binding NewPass, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    Width="150"
+                    Height="18"
+                    Text="{Binding NewPass, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
 
                 <Label
-                 Grid.Row="2"
-                 Grid.Column="1"
-                 HorizontalAlignment="Right"
-                 VerticalAlignment="Center"
-                 Content="Bevestig Wachtwoord" />
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
+                    Content="Bevestig Wachtwoord" />
 
                 <TextBox
-                 Grid.Row="2"
-                 Grid.Column="2"
-                 Width="150"
-                 Height="18"
-                 Text="{Binding ConfirmPass, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    Grid.Row="2"
+                    Grid.Column="2"
+                    Width="150"
+                    Height="18"
+                    Text="{Binding ConfirmPass, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
                 <StackPanel
-                 Grid.Row="3"
-                 Grid.Column="1"
-                 Grid.ColumnSpan="2"
-                 HorizontalAlignment="Center"
-                 VerticalAlignment="Center"
-                 Orientation="Horizontal">
+                    Grid.Row="3"
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Orientation="Horizontal">
                     <Button
-                     Margin="3"
+                        Margin="3"
+                        Padding="5,0,5,0"
                         Command="{Binding cmdOpslaan}"
-                     Padding="5,0,5,0"
-                     Content="Opslaan" />
+                        Content="Opslaan" />
                     <Button
-                     Margin="3"
-                     Command="{Binding cmdAnnuleer}"
-                     Padding="5,0,5,0"
-                     Content="Annuleren" />
+                        Margin="3"
+                        Padding="5,0,5,0"
+                        Command="{Binding cmdAnnuleer}"
+                        Content="Annuleren" />
                     <Button
-                     Margin="3"
-                     Command="{Binding cmdClose}"
-                     Padding="5,0,5,0"
-                     Content="Sluiten" />
+                        Margin="3"
+                        Padding="5,0,5,0"
+                        Command="{Binding cmdClose}"
+                        Content="Sluiten" />
                 </StackPanel>
 
 
